Minor styling changes
I've made some minor styling changes to the html and css files.

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
         <button id="btn-remove-ticket" class="btn btn-dark">Remove a Ticket</button>
       </form>
     </div>
+    <br>
 
     <!-- ********** HARDWARE PAGE BEGINS ********** -->
     <!-- ********** CREATE HARDWARE FORM ********** -->
@@ -149,7 +150,8 @@
         <p class="main-paragraph"><span>L</span>ooking to order some hardware for your computer and know the specifications, don't hesitate and order with us!</p>
         <p class="main-paragraph2">Just fill out the following the form with name of the hardware, the processor speed, the memory and the serial number.</p>
       <form id="create-hardware">
-        <h1 class="create-hardware-header">Create Hardware</h1>
+        <h1 class="hardware-header">Create Hardware</h1>
+        <br>
         <div class="form-group">
           <input type="date" id="start" name="hardware[date]" min="01-01-2019" max="12-31-2020" required>
         </div>
@@ -168,11 +170,13 @@
         <button type="submit" id="btn-create-hardware" class="btn btn-dark">Create Hardware</button>
       </form>
     </div>
+    <br>
 
     <!-- ********** UPDATE HARDWARE FORM ********** -->
     <div class='update-hardware-div'>
       <form id="update-hardware">
-        <h1 class="create-hardware-header">Update Hardware</h1>
+        <h1 class="hardware-header">Update Hardware</h1>
+        <br>
         <div class="form-group">
           <input class="inputField" placeholder="ID" type="text" name=hardware[id] required>
         </div>
@@ -200,7 +204,8 @@
     <div class="view-hardware-div">
       <br>
       <form id="get-hardware">
-        <h1 class="view-all-hardware-header">View All Hardware</h1>
+        <h1 class="hardware-header">View All Hardware</h1>
+        <br>
         <button id="btn-get-hardware" class="btn btn-dark">View All Hardware</button>
       </form>
     </div>
@@ -211,7 +216,8 @@
     <!-- ********** REMOVE HARDWARE FORM ********** -->
     <div class="remove-hardware-div">
       <form id="delete-hardware">
-        <h1 class="remove-hardware-header">Remove a Hardware</h1>
+        <h1 class="hardware-header">Remove a Hardware</h1>
+        <br>
         <input class="input-remove-hardware" placeholder="ID" type="text" name=hardware[id] required>
         <br>
         <button id="btn-remove-hardware" class="btn btn-dark">Remove a Hardware</button>
@@ -250,6 +256,7 @@
     </div>
     </section>
     <footer>
+
       <p> &copy; 2019</p>
     </footer>
     </div>
