Minor changes to the html, css, ui and app files
I've made some minor changes to the html, css, ui and app files

--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@
           <input class="inputField" placeholder="Serial Number" type="text" name="hardware[serial_number]" required>
         </div>
         <button type="submit" id="btn-create-hardware" class="btn btn-dark">Create Hardware</button>
+        <br>
+        <div id="hardware-display1"></div>
       </form>
     </div>
     <br>
